# wndtn_15hours

./: .gitignore  .gitmodules  CMakeLists.txt  malloc_compile_and_run.sh  readme.md  string_compile_and_run.sh  videos_links.txt
compile_scripts/: client_server_compile_and_run.sh  malloc_compile_and_run.sh  serialization_compile_and_run.sh  string_compile_and_run.sh
sources/EventSystem/src/: event.h  keyboardevent.h  main.cpp  mouseevent.h  window.cpp  window.h  windowevent.h
sources/EventSystem/src/win32window/: win32window.cpp
sources/GC/: gc.c  gc.h  main.c  tests.c
sources/client/csharp/: Client.cs  Program.cs  Servers_Client.sln
sources/client/java/: Client.java
sources/client/src/: client.cpp  client.h  main.cpp
sources/daw/: eqswindow.py  main.py  mainwindow.py
sources/daw/creational/: abstractfactory.py  singleton.py
sources/idk_sometryings/: endia.cpp
sources/java_thesystem/src/app/: Main.java
sources/java_thesystem/src/app/core/: Window.java
sources/java_thesystem/src/app/events/: Dispatcher.java  Event.java  (+2 more)
sources/malloc/: wndtn_malloc.c
sources/serialization/: core.cpp  core.h  meta.h  object.cpp  object.h  primitive.cpp  primitive.h  root.cpp  root.h
sources/server/src/: main.cpp  server.cpp  server.h
sources/userland/: event.cpp  event.h  main.cpp  system.h
src/: wndtn_malloc.c  wndtn_string.cpp
src/serialization/: array.cpp  array.h  core.cpp  core.h  lib.h  main.cpp  meta.h  primitive.cpp  primitive.h  serialization.h
src/userland/: eventsystem.h  keyboardevent.cpp  keyboardevent.h  main.cpp  system.cpp  system.h
(+6 files in other folders)
